# LLMPlayground

./: .gitignore
agents/: agent.py  llm_model.py  test.py
agents/react/: agentic.py  tests.py
agents/react/prompts/: react_prompt.py
data/: bible_data.py  data_utils.py
loggers/: tensorboard.py
networks/gpt/: gpt_helpers.py  gpt_model.py  train.py
training/: pyproject.toml  setup_env.sh
training/grpo_training/: grpo.py
